<resources>
    <string name="app_name">Clase On Click</string>

    <string name="hEditText">Escribe aquí</string>
    <string name="btn_mostrar">Mostrar</string>
    <string name="btn_notificacion">Notificación</string>

    <!-- se pueden repetir los textos, por ej haber usado el mismo para todas las opciones-->
    <string name="opt1">Opción 1</string>
    <string name="opt2">Opción 2</string>
    <string name="opt3">Opción 3</string>
    <string name="btn_opciones">Validar</string>

</resources>